# true-di-fastapi

./: .gitignore  LICENSE  pyproject.toml
app/: __main__.py
app/main/: app.py  di.py  events.py  routing.py
app/modules/todo/: dto.py  endpoints.py  models.py  services.py
